chore: update submodule changes